Добавлены 2 класса .nav_button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                     <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p>
                     <input type="button" value="Order Us">
                 </div>
-                <a class="nav_button" href="#"></a>
+                <div class="nav_buttons">
+                    <a class="nav_button" href="#"></a>
+                    <a class="nav_button" href="#"></a>
+                    <a class="nav_button" href="#"></a>
+                </div>
             </div>
         </div>
 
