доработки по позиционированию элементов на странице

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="slider_content">
                     <h3>TRENDING</h3>
                     <h1>Fishnet Chair</h1>
-                    <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p>
+                    <p>Seat and back with upholstery made of cold cure foam. Steel frame,<br> available in matt powder-coated black</p>
                     <input type="button" value="Order Us">
                 </div>
                 <div class="nav_buttons">
