Доработки по первой странице и начало второй страницы лендига

--- a/index.html
+++ b/index.html
@@ -23,12 +23,54 @@
                     <h3>TRENDING</h3>
                     <h1>Fishnet Chair</h1>
                     <p>Seat and back with upholstery made of cold cure foam. Steel frame,<br> available in matt powder-coated black</p>
-                    <input type="button" value="Order Us">
+                    <input class="order" type="button" value="Order Us">
                 </div>
                 <div class="nav_buttons">
                     <a class="nav_button" href="#"></a>
                     <a class="nav_button" href="#"></a>
                     <a class="nav_button" href="#"></a>
+                </div>
+            </div>
+        </div>
+        <div class="item_list1">
+            <h2><a href="#">Featured</a></h2>
+            <h2><a href="#">New</a></h2>
+            <a href="#">EXPLORE ALL</a>
+            
+            <div class="items_small">
+                <div class="item">
+                    <a class="arrow1" href="#"><img src="img/arrow1.png" alt=">"></a>
+                    <h3>Fishnet Chair</h3>
+                    <p>Seat and back with upholstery made of cold cure foam</p>
+                </div>
+                <div class="item">
+                    <a class="arrow1" href="#"><img src="img/arrow1.png" alt="#"></a>
+                    <h3>Fishnet Chair</h3>
+                    <p>Seat and back with upholstery made of cold cure foam</p>
+                </div>
+                <div class="item">
+                    <a class="arrow1" href="#"><img src="img/arrow1.png" alt="#"></a>
+                    <h3>Fishnet Chair</h3>
+                    <p>Seat and back with upholstery made of cold cure foam</p>
+                </div>
+                <div class="item">
+                    <a class="arrow1" href="#"><img src="img/arrow1.png" alt="#"></a>
+                    <h3>Fishnet Chair</h3>
+                    <p>Seat and back with upholstery made of cold cure foam</p>
+                </div>
+            </div>
+            <div class="items_big">
+                <div class="item">
+                    <h3>EXCLUSIVE</h3>
+                    <h2>Fishnet Chair</h2>
+                    <p>Seat and back with upholstery made of cold cure foam. <br> Steel frame, available in matt</p>
+                    <input class="order" type="button" value="Order Us">
+                </div>
+                <div class="item">
+                    <h3>EXCLUSIVE</h3>
+                    <h2>Fishnet Chair</h2>
+                    <p>Seat and back with upholstery made of cold cure foam. <br> Steel frame, available in matt</p>
+                    <input class="order" type="button" value="Order Us">
                 </div>
             </div>
         </div>
