Добавлена структура для остальных страниц из PSD

--- a/index.html
+++ b/index.html
@@ -73,6 +73,75 @@
                     <input class="order" type="button" value="Order Us">
                 </div>
             </div>
+            <div class="item_list2">
+                <h2>Trending Products</h2>
+                <a href="#">EXPLORE ALL</a> <!-- лучше сделать класс для этой кнопки, чтобы не повторять. см. item_list1 -->
+                <div class="images">
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                </div>
+            </div>
+            <div class="slider2">
+                  <div class="slider_content">
+                    <h3>HOT DEAL</h3>
+                    <h1>Fishnet Chair</h1>
+                    <p>Seat and back with upholstery made of cold cure foam. Steel frame,<br> available in matt powder-coated black</p>
+                    <input class="order" type="button" value="Order Us">
+                </div>
+                <div class="nav_buttons">
+                    <a class="nav_button" href="#"></a>
+                    <a class="nav_button" href="#"></a>
+                    <a class="nav_button" href="#"></a>
+                </div>  
+            </div>
+            <div class="item_list3">
+                <div class="item">
+                    <h3>EXCLUSIVE</h3>
+                    <h2>Fishnet Chair</h2>
+                    <p>Seat and back with upholstery made of cold cure foam. <br> Steel frame, available in matt</p>
+                    <input class="order" type="button" value="Order Us">
+                </div>
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+            </div>
+            <div class="mobile_app">
+                <h3></h3>
+                <h1></h1>
+                <p></p>
+                <a href="#"><img src="#">AppleStoreicon</a>
+                <a href="#"><img src="#">GooglePlayicon</a>
+            </div>
+            <div class="footer">
+                <div class="contact_us">
+                    <h4>CONTACT US</h4>
+                    <p>fgfgfgfgfg <br><br>fgfgfgfgfgfgfgfgfg</p>
+                </div>
+                <div class="useful_info">
+                    <h4>USEFUL INFORMATION</h4>
+                    <ul>
+                        <li><a href="#">Below to add five more</a></li>
+                    </ul>
+                </div>
+                <div class="in_touch">
+                    <p>gfgfgfgf</p>
+                    <input type="email" name="email">
+                </div>
+                <div class="copyright">
+                    <p>dgfgfg</p>
+                </div>
+                <div class="network_icons">
+                    <a href="#"><img src="#">to add 3 more</a>
+                </div>
+                <div class="docs">
+                    <a href="#">gggfgfgfg</a>
+                </div>
+            </div>
         </div>
 
     </div>
