добавлены все картинки из макета

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <title>INTERIOR</title>
     <link rel="stylesheet" href="style.css" type="text/css">
@@ -35,8 +36,7 @@
         <div class="item_list1">
             <h2><a href="#">Featured</a></h2>
             <h2><a href="#">New</a></h2>
-            <a href="#">EXPLORE ALL</a>
-            
+            <a class="explore" href="#">EXPLORE ALL</a>
             <div class="items_small">
                 <div class="item">
                     <a class="arrow1" href="#"><img src="img/arrow1.png" alt=">"></a>
@@ -49,7 +49,7 @@
                     <p>Seat and back with upholstery made of cold cure foam</p>
                 </div>
                 <div class="item">
-                    <a class="arrow1" href="#"><img src="img/arrow1.png" alt="#"></a>
+                    <a class="arrow1" href="#" target="_self"><img src="img/arrow1.png" alt="#"></a>
                     <h3>Fishnet Chair</h3>
                     <p>Seat and back with upholstery made of cold cure foam</p>
                 </div>
@@ -75,18 +75,18 @@
             </div>
             <div class="item_list2">
                 <h2>Trending Products</h2>
-                <a href="#">EXPLORE ALL</a> <!-- лучше сделать класс для этой кнопки, чтобы не повторять. см. item_list1 -->
+                <a class="explore" href="#">EXPLORE ALL</a>
                 <div class="images">
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
+                    <a href="#"><img src="img/product-11.jpg"></a>
+                    <a href="#"><img src="img/product-21.jpg"></a>
+                    <a href="#"><img src="img/product-31.jpg"></a>
+                    <a href="#"><img src="img/product-41.jpg"></a>
+                    <a href="#"><img src="img/product-5.jpg"></a>
+                    <a href="#"><img src="img/product-6.jpg"></a>
                 </div>
             </div>
             <div class="slider2">
-                  <div class="slider_content">
+                <div class="slider_content">
                     <h3>HOT DEAL</h3>
                     <h1>Fishnet Chair</h1>
                     <p>Seat and back with upholstery made of cold cure foam. Steel frame,<br> available in matt powder-coated black</p>
@@ -96,54 +96,68 @@
                     <a class="nav_button" href="#"></a>
                     <a class="nav_button" href="#"></a>
                     <a class="nav_button" href="#"></a>
-                </div>  
+                </div>
             </div>
             <div class="item_list3">
                 <div class="item">
                     <h3>EXCLUSIVE</h3>
                     <h2>Fishnet Chair</h2>
-                    <p>Seat and back with upholstery made of cold cure foam. <br> Steel frame, available in matt</p>
+                    <p>Seat and back with upholstery made of cold cure <br>foam. Steel frame, available in matt</p>
                     <input class="order" type="button" value="Order Us">
                 </div>
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
+                <img src="img/product-2-sm.jpg">
+                <img src="img/product-3-sm.jpg">
+                <img src="img/product-4-sm.jpg">
+                <img src="img/product-5-sm.jpg">
             </div>
             <div class="mobile_app">
-                <h3></h3>
-                <h1></h1>
-                <p></p>
-                <a href="#"><img src="#">AppleStoreicon</a>
-                <a href="#"><img src="#">GooglePlayicon</a>
+                <h3>mobile app</h3>
+                <h1>Find. Follow.<br>Favorite.</h1>
+                <p>Save your favorites and share your style.</p>
+                <a href="https://www.apple.com/ru/ios/app-store/" target="_blank"><img src="img/app-store.png"></a>
+                <a href="https://play.google.com/store/apps" target="_blank"><img src="img/google-play.png"></a>
             </div>
             <div class="footer">
                 <div class="contact_us">
                     <h4>CONTACT US</h4>
-                    <p>fgfgfgfgfg <br><br>fgfgfgfgfgfgfgfgfg</p>
+                    <p>132A Bridge Road Richmond VIC Australia.<br><br>Talk to us on 1300 132 info@interior.com </p>
                 </div>
                 <div class="useful_info">
                     <h4>USEFUL INFORMATION</h4>
                     <ul>
-                        <li><a href="#">Below to add five more</a></li>
+                        <li><a href="#" target="_parent">Sales terms</a></li>
+                        <li><a href="#">Customer care</a></li>
+                        <li><a href="#">Delivery</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">Architect accounts</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Exchanges &amp; returns</a></li>
                     </ul>
                 </div>
                 <div class="in_touch">
-                    <p>gfgfgfgf</p>
-                    <input type="email" name="email">
+                    <h4>Let’s Stay in Touch!</h4>
+                    <p>Suscribe to know about our latest news, products and special offers just for suscribers.</p>
+                    <form action="#">
+                        <input type="email" name="email" placeholder="your email address">
+                        <input type="submit" value=" ">
+                    </form>
                 </div>
-                <div class="copyright">
-                    <p>dgfgfg</p>
-                </div>
-                <div class="network_icons">
-                    <a href="#"><img src="#">to add 3 more</a>
-                </div>
-                <div class="docs">
-                    <a href="#">gggfgfgfg</a>
+                <div class="footer_bottom">
+                    <div class="copyright">
+                        <p>&copy; Copyright - INTERIOR 2016. All Rights Reserved.</p>
+                    </div>
+                    <div class="network_icons">
+                        <a href="#"><img src="img/social-links.png"></a>
+                    </div>
+                    <div class="docs">
+                        <a href="#">Terms &amp; Conditions / Privacy policy &amp; Cookies</a>
+                    </div>
                 </div>
             </div>
         </div>
 
     </div>
 </body>
+
 </html>
