небольшие правки по верстке, отступ от текста и header2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="items_big">
-                <div class="item">]
+                <div class="item">
                     <h3>EXCLUSIVE</h3>
                     <h2>Fishnet Chair</h2>
                     <p>Seat and back with upholstery made of cold cure foam.
