добавлено sticky menu

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="#"><img class="logo" src="img/logo.png" alt="logo"></a>
-            <a href="#"><img class="search" src="img/search.png" alt="search"></a>
-            <ul class="nav_bar">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PRODUCTS</a></li>
-                <li><a href="#">HISTORY</a></li>
-                <li><a href="#">SHOWROOM</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
             <div class="slider">
+                <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+                <a href="#"><img class="search" src="img/search.png" alt="search"></a>
+                <ul class="nav_bar">
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#">PRODUCTS</a></li>
+                    <li><a href="#">HISTORY</a></li>
+                    <li><a href="#">SHOWROOM</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
                 <div class="slider_content">
                     <h3>TRENDING</h3>
                     <h1>Fishnet Chair</h1>
@@ -33,13 +33,24 @@
                 </div>
             </div>
         </div>
+        <div class="sticky_menu">
+            <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+            <a href="#"><img class="search" src="img/search.png" alt="search"></a>
+            <ul class="nav_bar">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#">PRODUCTS</a></li>
+                <li><a href="#">HISTORY</a></li>
+                <li><a href="#">SHOWROOM</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </div>
         <div class="item_list1">
             <h2><a href="#">Featured</a></h2>
             <h2><a href="#">New</a></h2> <a class="explore" href="#">EXPLORE ALL</a>
             <div class="items_small">
                 <div class="item">
                     <div class="hidden">
-                        <a class="arrow1" href="#"><img src="img/arrow1.png" alt=">"></a>
+                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt=">"></a>
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
