закончена верстка по странице с детальным описанием и подключена библиотека bootstrap, начата работа над страницей каталога продуктов

--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
                 </div>
                 <div class="item">
                     <div class="hidden">
-                        <a class="arrow1" href="#"><img src="img/arrow1.png" alt="#"></a>
+                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt="#"></a>
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="hidden">
-                        <a class="arrow1" href="#" target="_self"><img src="img/arrow1.png" alt="#"></a>
+                        <a class="arrow1" href="item_details.html" target="_self"><img src="img/arrow1.png" alt="#"></a>
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="hidden">
-                        <a class="arrow1" href="#"><img src="img/arrow1.png" alt="#"></a>
+                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt="#"></a>
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
@@ -120,8 +120,13 @@
                 <h3>EXCLUSIVE</h3>
                 <h2>Fishnet Chair</h2>
                 <p>Seat and back with upholstery made of cold cure
-                    <br>foam. Steel frame, available in matt</p> <a class="order">Order Us</a>
-            </div> <img src="img/product-2-sm.jpg"> <img src="img/product-3-sm.jpg"> <img src="img/product-4-sm.jpg"> <img src="img/product-5-sm.jpg">
+                    <br>foam. Steel frame, available in matt</p> 
+                    <a class="order">Order Us</a>
+            </div> 
+            <img src="img/product-2-sm.jpg"> 
+            <img src="img/product-3-sm.jpg"> 
+            <img src="img/product-4-sm.jpg"> 
+            <img src="img/product-5-sm.jpg">
         </div>
         <div class="mobile_app">
             <h3>mobile app</h3>
