--- a/item_details.html
+++ b/item_details.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>INTERIOR</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
-</head>
+    <link rel="stylesheet" href="style.css" type="text/css"> </head>
 
 <body>
     <div class="container">
         <div class="header">
-        	<div class="menu_item_details">
-        		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+            <div class="menu_item_details">
+                <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
                 <a href="#"><img class="search" src="img/search.png" alt="search"></a>
                 <ul class="nav_bar">
                     <li><a href="index.html">HOME</a></li>
@@ -29,21 +28,71 @@
                 <li><a href="#">MODERN</a></li>
                 <li><a href="#">CLASSIC</a></li>
             </ul>
-        </div>	
+        </div>
         <div class="main">
-        	<div class="picture">
-        		<img class="big_pic" src="img">
-        		<a href=""><img class="small_pic" src="img"></a>
-        		<a href=""><img class="small_pic" src="img"></a>
-        		<a href=""><img class="small_pic" src="img"></a>
-        	</div>
-        	<div class="description">
-        		<h3>Fishnet Chair</h3>
-        		<h1>HOT DEAL</h1>
-        		<p>36.7</p>
-<!-- order button -->
-        		<p class="desc">uytuyttutut</p>
-        	</div>
-        	
+            <div class="picture"> <img class="big_pic" src="img/slider1.jpg">
+                <div class="small_pic">
+                    <a href="#"><img src="img/controll.jpg"></a>
+                    <a href="#"><img src="img/controll11.jpg"></a>
+                    <a href="#"><img src="img/controll2.jpg"></a>
+                </div>
+            </div>
+            <div class="description">
+                <h3>Fishnet Chair</h3>
+                <h4>HOT DEAL</h4>
+                <p class="price"><span>&#36;</span> 36.7 <span>&#8260; sq</span></p> <a class="order">Order Us</a>
+                <p>The majesty of Mountains - Ugmonk style.</p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore </p>
+                <p>et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+            </div>
+        </div>
+        <div class="item_list2">
+            <h2>Related Products</h2> <a class="explore" href="#">EXPLORE ALL</a>
+            <div class="images">
+                <a href="#"><img src="img/product-11.jpg"></a>
+                <a href="#"><img src="img/product-21.jpg"></a>
+                <a href="#"><img src="img/product-31.jpg"></a>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="contact_us">
+                <h4>CONTACT US</h4>
+                <p>132A Bridge Road Richmond VIC Australia.
+                    <br>
+                    <br>Talk to us on 1300 132 info@interior.com </p>
+            </div>
+            <div class="useful_info">
+                <h4>USEFUL INFORMATION</h4>
+                <ul>
+                    <li><a href="#" target="_parent">Sales terms</a></li>
+                    <li><a href="#">Customer care</a></li>
+                    <li><a href="#">Delivery</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Architect accounts</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Exchanges &amp; returns</a></li>
+                </ul>
+            </div>
+            <div class="in_touch">
+                <h4>Let’s Stay in Touch!</h4>
+                <p>Suscribe to know about our latest news, products and special offers just for suscribers.</p>
+                <form action="#">
+                    <input type="email" name="email" placeholder="your email address">
+                    <input type="submit" value=" "> </form>
+            </div>
+            <div class="footer_bottom">
+                <div class="copyright">
+                    <p>&copy; Copyright - INTERIOR 2016. All Rights Reserved.</p>
+                </div>
+                <div class="network_icons">
+                    <a href="#"><img src="img/social-links.png"></a>
+                </div>
+                <div class="docs"> <a href="#">Terms &amp; Conditions / Privacy policy &amp; Cookies</a> </div>
+            </div>
         </div>
     </div>
+</body>
+
+</html>
