добавлены оставшиеся страницы из макета и доработаны. Удалена бибилиотека bootstrap

--- a/contacts.html
+++ b/contacts.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,8 +9,8 @@
 
 <body>
     <div class="container">
-        <div class="header">
-            <div class="catalog_header">
+        <div class="contacts_header">
+            <div class="header">
                 <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
                 <a href="#"><img class="search" src="img/search.png" alt="search"></a>
                 <ul class="nav_bar">
@@ -20,46 +20,38 @@
                     <li><a href="#">SHOWROOM</a></li>
                     <li><a href="contacts.html">CONTACT</a></li>
                 </ul>
-                <h1>Our Products Range</h1>
-            </div>
+                <h1>Contact Us</h1> </div>
         </div>
-        <div class="catalog">
-            <ul class="nav_menu">
-                <li><a href="#">ALL</a></li>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">OFFICE</a></li>
-                <li><a href="#">FURNITURE</a></li>
-                <li><a href="#">MODERN</a></li>
-                <li><a href="#">CLASSIC</a></li>
-            </ul>
-            <div class="item_pictures"> 
-                <a href="item_details.html"><img src="img/product-11.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-21.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-31.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-41.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-5.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-6.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-11.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-21.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-31.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-41.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-5.jpg" alt="product"></a>
-                <a href="item_details.html"><img src="img/product-6.jpg" alt="product"></a>
+        <div class="contacts">
+            <div class="block">
+                <img src="img/label.png" alt="label">
+                <h4>California</h4>
+                <h5>Phone</h5>
+                <p>1900 - 1234 -5678</p>
+                <h5>Email:</h5>
+                <p>info@interior.com</p>
+                <h5><span>Address:</span></h5>
+                <p><span>12 W 1st St, 90001 Los Angeles, California</span></p>
             </div>
-            <a class="load_icon" href="#"><img src="img/load.png" alt="loading"></a>
-            <div class="items_big">
-                <div class="item">
-                    <h3>EXCLUSIVE</h3>
-                    <h2>Fishnet Chair</h2>
-                    <p>Seat and back with upholstery made of cold cure foam.
-                        <br> Steel frame, available in matt</p> <a class="order">Order Us</a> </div>
-                <div class="item">
-                    <h3>EXCLUSIVE</h3>
-                    <h2>Fishnet Chair</h2>
-                    <p>Seat and back with upholstery made of cold cure foam.
-                        <br>Steel frame, available in matt</p>
-                    <a class="order">Order Us</a>
-                </div>
+            <div class="block">
+                <img src="img/label.png" alt="label">
+                <h4>California</h4>
+                <h5>Phone</h5>
+                <p>1900 - 1234 -5678</p>
+                <h5>Email:</h5>
+                <p>info@interior.com</p>
+                <h5><span>Address:</span></h5>
+                <p><span>12 W 1st St, 90001 Los Angeles, California</span></p>
+            </div>
+            <div class="block">
+                <img src="img/label.png" alt="label">
+                <h4>California</h4>
+                <h5>Phone</h5>
+                <p>1900 - 1234 -5678</p>
+                <h5>Email:</h5>
+                <p>info@interior.com</p>
+                <h5><span>Address:</span></h5>
+                <p><span>12 W 1st St, 90001 Los Angeles, California</span></p>
             </div>
         </div>
         <div class="footer">
