--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <a href="#"><img class="search" src="img/search.png" alt="search"></a>
                 <ul class="nav_bar">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">PRODUCTS</a></li>
+                    <li><a href="products.html">PRODUCTS</a></li>
                     <li><a href="#">HISTORY</a></li>
                     <li><a href="#">SHOWROOM</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="contacts.html">CONTACT</a></li>
                 </ul>
                 <div class="slider_content">
                     <h3>TRENDING</h3>
@@ -38,10 +38,10 @@
             <a href="#"><img class="search" src="img/search.png" alt="search"></a>
             <ul class="nav_bar">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">PRODUCTS</a></li>
+                <li><a href="products.html">PRODUCTS</a></li>
                 <li><a href="#">HISTORY</a></li>
                 <li><a href="#">SHOWROOM</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contacts.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="item_list1">
