--- a/item_details.html
+++ b/item_details.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>INTERIOR</title>
-    <link rel="stylesheet" href="style.css" type="text/css"> </head>
+    <link rel="stylesheet" href="style.css" type="text/css">
+</head>
 
 <body>
     <div class="container">
@@ -14,10 +15,10 @@
                 <a href="#"><img class="search" src="img/search.png" alt="search"></a>
                 <ul class="nav_bar">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">PRODUCTS</a></li>
+                    <li><a href="products.html">PRODUCTS</a></li>
                     <li><a href="#">HISTORY</a></li>
                     <li><a href="#">SHOWROOM</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="contacts.html">CONTACT</a></li>
                 </ul>
             </div>
             <ul class="nav_menu">
